--- a/css/style.css
+++ b/css/style.css
@@ -13,3 +13,40 @@ body{
     max-width: 1352px;
     margin: 0 auto;
 }
+.page-header-box{
+    box-shadow: 2px 3px 5px #00000029;
+}
+.page-header{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 70px;
+}
+.page-header > a{
+    color: #08A6E4;
+    font-size: 32px;
+    text-decoration: none;
+}
+.page-header > nav > ul{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    list-style: none;
+}
+.page-header > nav > ul > li{
+    padding: 24px 30px;
+}
+.page-header > nav > ul > li > a{
+    text-decoration: none;
+    text-transform: uppercase;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 11px;
+    font-weight: bold;
+    color: #A5A5A5;
+}
+.page-header > nav > ul > li:hover{
+    border-bottom: 4px solid #08A6E4;
+}
+.page-header > nav > ul > li:hover > a{
+    color: #000000;
+}
